# delphi-llms

./: .gitignore  AGENTS.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: start-ollama.sh
configs/: categories.example.yaml  experiment.example.yaml
docs/: 01-contexto-e-objetivo.md  02-desenho-experimental.md  03-arquitetura-tecnica.md  04-dados-e-avaliacao.md  05-ambiente-devcontainer.md  06-plano-de-implementacao.md
src/delphi_llms/: __init__.py  cli.py  config.py  models.py
src/delphi_llms/agents/: __init__.py  expert.py  facilitator.py  ollama.py
src/delphi_llms/data/: __init__.py  loader.py  schema.py
src/delphi_llms/delphi/: __init__.py  aggregation.py  engine.py  stopping.py
src/delphi_llms/eval/: __init__.py  compare.py  export_sqlite.py  metrics.py
src/delphi_llms/viz/: plots.py
tests/: test_aggregation.py  test_cli_dataset_validate.py  test_compare.py  test_engine.py  test_export_sqlite.py  test_loader.py  test_ollama_agent.py  test_schema.py  test_stopping.py
